Motivation für IH-Optimierung sortiert

--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -478,11 +478,11 @@ Ein Simulationsmodell der hier vorliegenden Art fällt grundsätzlich in den Ber
 da es nicht nur die Vorhersage zukünftiger Systemzustände erlaubt, sondern auch Faktoren identifiziert,
 die verändert werden können, um einen bestimmten Zustand zu erreichen.
 
-Ein Beispiel für eventuelle Nutzer einer Simulation wie der hier genutzten, könnten 
+Ein Beispiel für eventuelle Nutzer einer Simulation wie der hier verwendeten, könnten 
 Betreiber größerer Fahrzeugflotten (z.B. LKW oder Busse) sein. 
-Fahrzeuge, die sich lange in Instandsetzung befinden, können in dieser Zeit keinen Mehrwert generieren.
 Gemäß Isermann \cite{Isermann_2011} belaufen sich bis zu 20\% der laufenden Kosten beim Betrieb von Maschinen auf
-die Instandhaltung bzw. Instandsetzung. % TODO: Dieser Satz muss sich noch besser in den Absatz einfügen.
+die Instandhaltung bzw. Instandsetzung.
+Fahrzeuge, die sich lange in Instandsetzung befinden, können in dieser Zeit keinen Mehrwert generieren.
 Es besteht also ein Interesse daran, immer ausreichende Instandsetzungskapazitäten vorhalten zu können.
 Da der Unterhalt derartiger Kapazitäten aber mit hohen Kosten verbunden ist, ist es von großem
 Interesse, die \emph{optimale} Instandsetzungskapazität für eine gegebene Flotte zu identifizieren.
