--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -743,8 +743,7 @@ Abschließend bleibt zu erwähnen, dass Kubernetes zwar eine hohe Flexibilität 
 aber damit fast automatisch auch eine hohe Komplexität hat. Für große Anbieter von Onlinediensten
 ist der Mehrwert durch diese Komplexität sicherlich vorhanden.
 Für kleinere Unternehmen, die überlegen, Kubernetes zu verwenden, kann es sinnvoller sein,
-alternative, simplere Methoden für die Serviceerbringung zu nutzen.
-%TODO: Hatte ich nicht mal eine Quelle um das zu unterstützen?
+alternative, simplere Methoden für die Serviceerbringung zu nutzen \cite{Pagani_2019}.
 
 \section{Ausblick}
 \label{sec:Ausblick}
