--- a/document/literature.bib
+++ b/document/literature.bib
@@ -238,5 +238,12 @@
   urldate = {2024-12-12}
 }
 
+@online{Pagani_2019,
+  author  = {Paganini, Catherine},
+  title   = {Primer: How Kubernetes Came to Be, What It Is, and Why You Should Care},
+  year    = 2019,
+  url     = {https://thenewstack.io/primer-how-kubernetes-came-to-be-what-it-is-and-why-you-should-care/},
+  urldate = {2024-12-18}
+}
 
 
