Add online sources

--- a/document/literature.bib
+++ b/document/literature.bib
@@ -246,4 +246,19 @@
   urldate = {2024-12-18}
 }
 
+@online{ibm_history,
+  author  = {Susnjara, Stephanie},
+  title   = {The history of Kubernetes},
+  year    = 2023,
+  url     = {https://www.ibm.com/think/topics/kubernetes-history},
+  urldate = {2024-11-28}
+}
+
+@online{kubernetes_journey,
+  author  = {Cloud Native Computing Foundation},
+  title   = {Kubernetes - Project Journey Report},
+  year    = 2023,
+  url     = {https://www.cncf.io/reports/kubernetes-project-journey-report/},
+  urldate = {2024-11-28}
+}
 
