--- a/document/literature.bib
+++ b/document/literature.bib
@@ -203,16 +203,17 @@
   urldate = {2024-12-10}
 }
 
-@INPROCEEDINGS{8632383,
-  author={Sanchez, Susan M.},
-  booktitle={2018 Winter Simulation Conference (WSC)}, 
-  title={DATA FARMING: BETTER DATA, NOT JUST BIG DATA}, 
-  year={2018},
-  volume={},
-  number={},
-  pages={425-439},
-  keywords={Big Data;Data models;Data mining;Correlation;Tools;Analytical models;Computational modeling},
-  doi={10.1109/WSC.2018.8632383}}
+@inproceedings{8632383,
+  author    = {Sanchez, Susan M.},
+  booktitle = {2018 Winter Simulation Conference (WSC)},
+  title     = {DATA FARMING: BETTER DATA, NOT JUST BIG DATA},
+  year      = {2018},
+  volume    = {},
+  number    = {},
+  pages     = {425-439},
+  keywords  = {Big Data;Data models;Data mining;Correlation;Tools;Analytical models;Computational modeling},
+  doi       = {10.1109/WSC.2018.8632383}
+}
 
 @online{cncf,
   author  = {Thakkar, Rajiv},
@@ -261,4 +262,53 @@
   url     = {https://www.cncf.io/reports/kubernetes-project-journey-report/},
   urldate = {2024-11-28}
 }
+
+@article{nginx,
+  author     = {Reese, Will},
+  title      = {Nginx: the high-performance web server and reverse proxy},
+  year       = {2008},
+  issue_date = {September 2008},
+  publisher  = {Belltown Media},
+  address    = {Houston, TX},
+  volume     = {2008},
+  number     = {173},
+  issn       = {1075-3583},
+  abstract   = {A leaner, meaner Apache.},
+  journal    = {Linux J.},
+  month      = sep,
+  articleno  = {2}
+}
+
+@online{kubernetes.io_pod_lifecycle,
+  author  = {The Kubernetes Authors},
+  title   = {Kubernetes - Pod Lifecycle},
+  year    = 2024,
+  url     = {https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-states},
+  urldate = {2025-01-28}
+}
+
+@online{kubernetes.secret_types,
+  author  = {The Kubernetes Authors},
+  title   = {Kubernetes - Secrets},
+  year    = 2024,
+  url     = {https://kubernetes.io/docs/concepts/configuration/secret/#secret-types},
+  urldate = {2025-01-30}
+}
+
+@misc{rfc4648,
+  series       = {Request for Comments},
+  number       = 4648,
+  howpublished = {RFC 4648},
+  publisher    = {RFC Editor},
+  doi          = {10.17487/RFC4648},
+  url          = {https://www.rfc-editor.org/info/rfc4648},
+  author       = {Simon Josefsson},
+  title        = {{The Base16, Base32, and Base64 Data Encodings}},
+  pagetotal    = 18,
+  year         = 2006,
+  month        = oct,
+  abstract     = {This document describes the commonly used base 64, base 32, and base 16 encoding schemes. It also discusses the use of line-feeds in encoded data, use of padding in encoded data, use of non-alphabet characters in encoded data, use of different encoding alphabets, and canonical encodings. {[}STANDARDS-TRACK{]}}
+}
+
+
 
